--- a/platformio.ini
+++ b/platformio.ini
@@ -7,3 +7,13 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+upload_port = /dev/cu.wchusbserial14310
+
+lib_deps =
+     https://github.com/dawson-home-automation/firmware-base-nodemcu.git
+     PubSubClient
